# tanuki

./: .gitignore  README.md  aarch64.risu
tanuki/: Cargo.toml  README.md  build.rs
tanuki-codegen/: Cargo.toml  README.md
tanuki-codegen/src/: constraints.rs  lib.rs  memory.rs  test.rs
tanuki/src/: lib.rs  main.rs
