[package]
name = "tanuki-codegen"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
arbitrary = "1.4.2"
arbitrary-int = { version = "2.0.0", features = ["arbitrary"] }
prettyplease = "0.2.37"
proc-macro2 = { version = "1" }
quote = "=1.0.40"
syn = "2.0.106"
winnow = { version = "0.7.13", features = ["std"] }

# [dev-dependencies]
# bad64 = "0.9.0"
